@@ -14,8 +14,6 @@ CunctatorPort=3749
 CicIpAddress1=1.2.3.4
 CicPort=5001
 NetcuePort=/dev/ttyS0
-
-[Audio]
 AdapterIpAddress=192.168.21.11
 InputBusXfers=No
 OutputBusXfers=Yes
